localization/v2.0.x/site/de/adminGuide/configure-docker.md
---
id: configure-docker.md
label: Docker Compose
related_key: configure
summary: Learn how to configure your Milvus with Docker Compose.
title: ''
---
<h1 id="Configure-Milvus-with-Docker-Compose" class="common-anchor-header">Configure Milvus with Docker Compose<button data-href="#Configure-Milvus-with-Docker-Compose" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>This topic describes how to configure your Milvus with Docker Compose.</p>
<div class="alert note">
In current release, all parameters take effect only after being configured at the startup of Milvus.
</div>
<h2 id="Download-a-configuration-file" class="common-anchor-header">Download a configuration file<button data-href="#Download-a-configuration-file" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><p><a href="https://raw.githubusercontent.com/milvus-io/milvus/v2.0.2/configs/milvus.yaml">Download</a> <code translate="no">milvus.yaml</code> directly or with the following command.</p>
<pre><code translate="no">$ wget https://raw.githubusercontent.com/milvus-io/milvus/v2.0.2/configs/milvus.yaml
<button class="copy-code-btn"></button></code></pre>
<h2 id="Modify-the-configuration-file" class="common-anchor-header">Modify the configuration file<button data-href="#Modify-the-configuration-file" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><p>Configure your Milvus instance to suit your application scenarios by adjusting corresponding parameters in <code translate="no">milvus.yaml</code>.</p>
<p>Check the following links for more information about each parameter.</p>
<p>Sorted by:</p>
<div class="filter">
<a href="#component">Components or dependencies</a> <a href="#purpose">Configuration purposes</a> 
</div>
<div class="filter-component table-wrapper">
<table id="component">
<thead>
  <tr>
    <th>Dependencies</th>
    <th>Components</th>
  </tr>
</thead>
<tbody>
  <tr>
    <td>
        <ul>
            <li><a href="/docs/de/configure_etcd.md">etcd</a></li>
            <li><a href="/docs/de/configure_minio.md">MinIO or S3</a></li>
            <li><a href="/docs/de/configure_pulsar.md">Pulsar</a></li>
            <li><a href="/docs/de/configure_rocksmq.md">RocksMQ</a></li>
        </ul>
    </td>
    <td>
        <ul>
            <li><a href="/docs/de/configure_rootcoord.md">Root coord</a></li>
            <li><a href="/docs/de/configure_proxy.md">Proxy</a></li>
            <li><a href="/docs/de/configure_querycoord.md">Query coord</a></li>
            <li><a href="/docs/de/configure_querynode.md">Query node</a></li>
            <li><a href="/docs/de/configure_indexcoord.md">Index coord</a></li>
            <li><a href="/docs/de/configure_indexnode.md">Index node</a></li>
            <li><a href="/docs/de/configure_datacoord.md">Data coord</a></li>
            <li><a href="/docs/de/configure_datanode.md">Data node</a></li>
            <li><a href="/docs/de/configure_localstorage.md">Local storage</a></li>
            <li><a href="/docs/de/configure_log.md">Log</a></li>
            <li><a href="/docs/de/configure_messagechannel.md">Message channel</a></li>
            <li><a href="/docs/de/configure_common.md">Common</a></li>
            <li><a href="/docs/de/configure_knowhere.md">Knowhere</a></li>
        </ul>
    </td>
  </tr>
</tbody>
</table>
</div>
<div class="filter-purpose table-wrapper">
<table id="purpose">
<thead>
  <tr>
    <th>Purpose</th>
    <th>Parameters</th>
  </tr>
</thead>
<tbody>
  <tr>
    <td>Performance tuning</td>
    <td>
        <ul>
            <li><a href="/docs/de/configure_querynode.md#queryNode.gracefulTime"><code translate="no">queryNode.gracefulTime</code></a></li>
            <li><a href="/docs/de/configure_rootcoord.md#rootCoord.minSegmentSizeToEnableIndex"><code translate="no">rootCoord.minSegmentSizeToEnableIndex</code></a></li>
            <li><a href="/docs/de/configure_datacoord.md#dataCoord.segment.maxSize"><code translate="no">dataCoord.segment.maxSize</code></a></li>
            <li><a href="/docs/de/configure_datacoord.md#dataCoord.segment.sealProportion"><code translate="no">dataCoord.segment.sealProportion</code></a></li>
            <li><a href="/docs/de/configure_datanode.md#dataNode.flush.insertBufSize"><code translate="no">dataNode.flush.insertBufSize</code></a></li>
            <li><a href="/docs/de/configure_querycoord.md#queryCoord.autoHandoff"><code translate="no">queryCoord.autoHandoff</code></a></li>
            <li><a href="/docs/de/configure_querycoord.md#queryCoord.autoBalance"><code translate="no">queryCoord.autoBalance</code></a></li>
            <li><a href="/docs/de/configure_localstorage.md#localStorage.enabled"><code translate="no">localStorage.enabled</code></a></li>
        </ul>
    </td>
  </tr>
  <tr>
    <td>Data and meta</td>
    <td>
        <ul>
            <li><a href="/docs/de/configure_common.md#common.retentionDuration"><code translate="no">common.retentionDuration</code></a></li>
            <li><a href="/docs/de/configure_rocksmq.md#rocksmq.retentionTimeInMinutes"><code translate="no">rocksmq.retentionTimeInMinutes</code></a></li>
            <li><a href="/docs/de/configure_datacoord.md#dataCoord.enableCompaction"><code translate="no">dataCoord.enableCompaction</code></a></li>
            <li><a href="/docs/de/configure_datacoord.md#dataCoord.enableGarbageCollection"><code translate="no">dataCoord.enableGarbageCollection</code></a></li>
            <li><a href="/docs/de/configure_datacoord.md#dataCoord.gc.dropTolerance"><code translate="no">dataCoord.gc.dropTolerance</code></a></li>
        </ul>
    </td>
  </tr>
  <tr>
    <td>Administration</td>
    <td>
        <ul>
            <li><a href="/docs/de/configure_log.md#log.level"><code translate="no">log.level</code></a></li>
            <li><a href="/docs/de/configure_log.md#log.file.rootPath"><code translate="no">log.file.rootPath</code></a></li>
            <li><a href="/docs/de/configure_log.md#log.file.maxAge"><code translate="no">log.file.maxAge</code></a></li>
            <li><a href="/docs/de/configure_minio.md#minio.accessKeyID"><code translate="no">minio.accessKeyID</code></a></li>
            <li><a href="/docs/de/configure_minio.md#minio.secretAccessKey"><code translate="no">minio.secretAccessKey</code></a></li>
        </ul>
    </td>
  </tr>
</tbody>
</table>
</div>
<h2 id="Download-an-installation-file" class="common-anchor-header">Download an installation file<button data-href="#Download-an-installation-file" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><p>Download the installation file for Milvus <a href="https://github.com/milvus-io/milvus/releases/download/v2.0.2/milvus-standalone-docker-compose.yml">standalone</a> or <a href="https://github.com/milvus-io/milvus/releases/download/v2.0.2/milvus-cluster-docker-compose.yml">cluster</a>, and save it as <code translate="no">docker-compose.yml</code>.</p>
<p>You can also simply run the following command.</p>
<pre><code translate="no"><span class="hljs-comment"># For Milvus standalone</span>
$ wget https://github.com/milvus-io/milvus/releases/download/v2.0.2/milvus-standalone-docker-compose.yml -O docker-compose.yml
<button class="copy-code-btn"></button></code></pre>
<pre><code translate="no"><span class="hljs-comment"># For Milvus cluster</span>
$ wget https://github.com/milvus-io/milvus/releases/download/v2.0.2/milvus-cluster-docker-compose.yml -O docker-compose.yml
<button class="copy-code-btn"></button></code></pre>
<h2 id="Modify-the-installation-file" class="common-anchor-header">Modify the installation file<button data-href="#Modify-the-installation-file" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><p>In <code translate="no">docker-compose.yml</code>, add a <code translate="no">volumes</code> section under each Milvus component, i.e. root coord, data coord, data node, query coord, query node, index coord, index node, and proxy.</p>
<p>Map the local path to your <code translate="no">milvus.yaml</code> file onto the corresponding docker container paths to the configuration files <code translate="no">/milvus/configs/milvus.yaml</code> under all <code translate="no">volumes</code> sections.</p>
<pre><code translate="no" class="language-yaml">...
proxy:
    container_name: milvus-proxy
    image: milvusdb/milvus:v2.0.0-rc7-20211011-d567b21
    <span class="hljs-built_in">command</span>: [<span class="hljs-string">&quot;milvus&quot;</span>, <span class="hljs-string">&quot;run&quot;</span>, <span class="hljs-string">&quot;proxy&quot;</span>]
    volumes:       <span class="hljs-comment"># Add a volumes section.</span>
      - /local/path/to/your/milvus.yaml:/milvus/configs/milvus.yaml   <span class="hljs-comment"># Map the local path to the container path</span>
    environment:
      ETCD_ENDPOINTS: etcd:2379
      MINIO_ADDRESS: minio:9000
      PULSAR_ADDRESS: pulsar://pulsar:6650
    ports:
      - <span class="hljs-string">&quot;19530:19530&quot;</span>
...
<button class="copy-code-btn"></button></code></pre>
<div class="alert note">
Data are stored in the <code translate="no">/volumes</code> folder according to the default configuration in <code translate="no">docker-compose.yml</code>. To change the folder to store data, edit <code translate="no">docker-compose.yml</code> or run <code translate="no">$ export DOCKER_VOLUME_DIRECTORY=</code>.
</div>
<h2 id="Start-Milvus" class="common-anchor-header">Start Milvus<button data-href="#Start-Milvus" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><p>Having finished modifying the configuration file and installation file, you can then start Milvus.</p>
<pre><code translate="no">$ <span class="hljs-built_in">sudo</span> docker-compose up -d
<button class="copy-code-btn"></button></code></pre>
<h2 id="Whats-next" class="common-anchor-header">What’s next<button data-href="#Whats-next" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><ul>
<li>If you want to learn how to monitor the Milvus services and create alerts:
<ul>
<li>Learn <a href="/docs/de/monitor.md">Monitor Milvus 2.0 with Prometheus Operator on Kubernetes</a></li>
<li>Learn <a href="/docs/de/visualize.md">Visualize Milvus Metrics in Grafana</a>.</li>
</ul></li>
</ul>
